practice-exam-tracker-sfdx/PackageFormat/sfdx project/objects/Exam_Attempt__c.object
<CustomObject>
    <fields>
        <fullName>Associate__c</fullName>
        <label>Associate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Exam Attempts</relationshipLabel>
        <relationshipName>Exam_Attempts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attempt_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Attempt Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attempt_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Attempt Number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Start_Of_Batch__c</fullName>
        <label>Days Since Start Of Batch</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exam_Type__c</fullName>
        <defaultValue>$CustomMetadata.Exam_Type__mdt.ADM_201.Label</defaultValue>
        <label>Exam Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exam_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exam_Version__c</fullName>
        <formula>IF ( RecordType.Name = &apos;Practice&apos;, &apos;N/A&apos;,
IF((MONTH(Attempt_Date__c)  = 2 ||MONTH(Attempt_Date__c)  = 3 ||MONTH(Attempt_Date__c)  = 4 ||MONTH(Attempt_Date__c)  = 5), &quot;Spring &apos;&quot;, (IF ( (MONTH(Attempt_Date__c)  = 6 ||MONTH(Attempt_Date__c)  = 7 ||MONTH(Attempt_Date__c)  = 8 ||MONTH(Attempt_Date__c)  = 9), &quot;Summer &apos;&quot;, &quot;Winter &apos;&quot;))) + RIGHT(TEXT(YEAR( Attempt_Date__c)), 2)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exam Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <label>Overall Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pass__c</fullName>
        <formula>(TEXT(Exam_Type__c) =  $CustomMetadata.Exam_Type__mdt.ADM_201.MasterLabel 
     &amp;&amp;  Overall_Score__c  &gt;=   $CustomMetadata.Exam_Type__mdt.ADM_201.Passing_Score__c)
||
(TEXT(Exam_Type__c) =  $CustomMetadata.Exam_Type__mdt.PD1.MasterLabel 
     &amp;&amp;  Overall_Score__c  &gt;=   $CustomMetadata.Exam_Type__mdt.PD1.Passing_Score__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice_Exam_Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Practice Exam Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Exam Attempt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Associate__c</columns>
        <columns>Exam_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Pass__c</columns>
        <columns>Overall_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Certification_Attempts</fullName>
        <columns>NAME</columns>
        <columns>Associate__c</columns>
        <columns>Exam_Type__c</columns>
        <columns>Pass__c</columns>
        <columns>Attempt_Number__c</columns>
        <columns>Days_Since_Start_Of_Batch__c</columns>
        <columns>Exam_Version__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exam_Attempt__c.Certification</value>
        </filters>
        <label>Certification Attempts</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Associate__c</columns>
        <columns>Exam_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Pass__c</columns>
        <columns>Overall_Score__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>PD1_Practice_Attempts</fullName>
        <columns>NAME</columns>
        <columns>Attempt_Date__c</columns>
        <columns>Associate__c</columns>
        <columns>Practice_Exam_Version__c</columns>
        <columns>Attempt_Number__c</columns>
        <columns>Pass__c</columns>
        <columns>Overall_Score__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Exam_Type__c</field>
            <operation>equals</operation>
            <value>PD1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exam_Attempt__c.Practice</value>
        </filters>
        <label>PD1 Practice Attempts</label>
    </listViews>
    <listViews>
        <fullName>Practice_Attempts</fullName>
        <columns>NAME</columns>
        <columns>Practice_Exam_Version__c</columns>
        <columns>Attempt_Number__c</columns>
        <columns>Associate__c</columns>
        <columns>Pass__c</columns>
        <columns>Overall_Score__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Exam_Type__c</field>
            <operation>equals</operation>
            <value>ADM 201</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Exam_Attempt__c.Practice</value>
        </filters>
        <label>ADM 201 Practice Attempts</label>
    </listViews>
    <nameField>
        <displayFormat>Attempt-{0000}</displayFormat>
        <label>Exam Attempt ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Attempts</pluralLabel>
    <recordTypes>
        <fullName>Certification</fullName>
        <active>true</active>
        <label>Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Practice</fullName>
        <active>true</active>
        <label>Practice</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>